--- a/GameStore/GameStore.Web/Resources/Views/Game/Details.ru.resx
+++ b/GameStore/GameStore.Web/Resources/Views/Game/Details.ru.resx
@@ -73,7 +73,7 @@
     </data>
     <data name="Details text" xml:space="preserve">
         <value>
-            Приобретите Ace Combat 7: Skies Unknown Launch Edition, который будет доступен до 18.02.2009, и получите следующий контент:
+            Приобретите тур и получите следующие плюшки:
         </value>
     </data>
     <data name="Bundle" xml:space="preserve">
