--- a/GameStore/GameStore.Web/Resources/Views/Home/Index.ru.resx
+++ b/GameStore/GameStore.Web/Resources/Views/Home/Index.ru.resx
@@ -3,7 +3,7 @@
 <root>
     <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
         <xsd:element name="root" msdata:IsDataSet="true">
-            
+
         </xsd:element>
     </xsd:schema>
     <resheader name="resmimetype">
@@ -47,26 +47,26 @@
         <comment>Title</comment>
     </data>
     <data name="Main Header" xml:space="preserve">
-        <value>Вы знаете кто такой Джон Рембо?</value>
+        <value>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, recusandae??</value>
     </data>
     <data name="First issue" xml:space="preserve">
         <value>
-            Члены удобства Микроволновые недороги, легко и пропаганды в выходные дни. На самом деле, концы Pellentesque Фелис Vivamus volutpat accumsan. Нет долина не игроки транспортных средств. Глютен.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, recusandae?
         </value>
     </data>
     <data name="Second issue" xml:space="preserve">
         <value>
-            На самом деле, концы Pellentesque Фелис Vivamus volutpat accumsan. Нет долина не игроки транспортных средств. Глютен.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, recusandae?.
         </value>
     </data>
     <data name="Third issue" xml:space="preserve">
         <value>
-            Микроволновые члены удобства дуги по уик-энда. Нет долина не игроки транспортных средств. Глютен. Представьте, ни tincidunt Пурус. До либо ворот.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, recusandae?. До либо ворот.
         </value>
     </data>
     <data name="Main Text" xml:space="preserve">
         <value>
-            Донец Урна Sapien, кэрри и не condimentum идентификатор, элемент, в котором. Чат с бананами некрасивых, стрельба из лука франшизы салат. А кто там, и сидеть Амет mauris Eget neque euismod Fringilla. Члены удобства Микроволновые недороги, легко и пропаганды в выходные дни. На самом деле, концы Pellentesque Фелис Vivamus volutpat accumsan. Нет долина не игроки транспортных средств. Глютен. Живой футбол в то время, масса разработчиков танкеров.
+Путешествия позволяют нам изучать мир не по картинкам и книжкам, а собственными глазами, руками и прочими частями тела (например, через кулинарные традиции и особенности). Не любите путешествовать? Это вы просто не пробовали! Скорее пакуем чемоданы и вперед за новыми знаниями и впечатлениями.
         </value>
     </data>
     <data name="Learn More" xml:space="preserve">
